# OpenCV-Cpp

./: CMakeLists.txt  README.md  first.cpp
basics/: basic_functions.cpp  color_detection.cpp  contour_detection.cpp  face_detection.cpp  read.cpp  shapes_nd_text.cpp  warp_perspective.cpp
